--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "MrJoCrafter",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "discord.js-commando": "^0.9.0"
+    "discord.js": "^12.2.0",
+    "discord.js-commando": "^0.9.0",
+    "snekfetch": "^4.0.0"
   }
 }
