--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "MrJoCrafter",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.2.0",
-    "discord.js-commando": "^0.9.0",
-    "snekfetch": "^4.0.0"
+    "discord-akairo": "^8.1.0",
+    "discord.js": "^12.3.0"
   }
 }
